@@ -1,0 +1,5 @@
+#
+#	Sound Subsystem of Sandix
+#
+#	Looking into the motherboard, something reminds me that I should build
+#	the sound subsystem for Sandix! AHA~ Check how Linux works.
