@@ -263,3 +263,12 @@ Fri Nov 13 09:42:52 CST 2015
 
 Mon Nov 16 23:26:53 CST 2015
 - [+] Diary/11-16-2015
+
+
+Tue Nov 17 13:24:49 CST 2015
+- [+] Diary/11-17-2015				[D] Life with TOEFL :)
+
+
+Sun Nov 22 09:37:33 CST 2015
+- [+] sound/Makefile				[D] :) Sounds like Shit
+- [+] sound/Kconfig
